--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="../project 12/css/css/font-awesome.min.css">
+    <link rel="stylesheet" href="font-awesome/css/css/font-awesome.min.css">
 </head>
 <body>
     <header>
